# takehome

./: README.md  gpu_llm_smoketest.py
takehome_20260128/: .gitignore  README.md  pyproject.toml  topic_a.py  topic_a_max.py  topic_a_noise.py  topic_a_temp.py  topic_a_weight_decay.py  topic_b_part1.py  topic_b_part2.py  topic_b_part3.py  topic_b_step2.py  topic_b_step2b.py  topic_b_step4_unembed_cosine.py  topic_b_step4b_dot_animal_to_number.py  topic_b_utils.py
