[project]
name = "takehome-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML/data science
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    # Visualization
    "matplotlib>=3.7",
    # Utilities
    "tqdm>=4.65",
    "jaxtyping>=0.2",
    "accelerate>=1.12.0",
]
